# comp2003-2025-2026-group-2

./: .gitignore  .mailmap  PROJECT_MAP.md  README.md  TEST_COVERAGE_PLAN.md  opencode.json
SourceCode/back-end/: .envrc.example  .gitignore  Cargo.toml  Dockerfile  backup.sh  docker-compose-ci.override.yml  docker-compose.override.yml  docker-compose.yml  flake.nix  openapi.json  postgresql.conf  postman-collection.json
SourceCode/back-end/.sqlx/: query-00878fcdae65d3b3357121e85143320de932ac4977117fac86fa93c38dfe79b9.json  query-0226c93fa0c96641a551ddea60d4bce3499e6823ece0ffa1d2f63f1294ccabb5.json  query-11b57d4acb8e43d9c1dfbbc8b866945e1a157fb25a010d1d1b61d9cd02030561.json  query-16b1686dd284a0bb947f4483291947721e5c8f8723940f7157b9c6e0583cbc7f.json  query-270c2e96dd848c01c2c9c874416b8fed049091bebdd37f91b371ebdcb10208c6.json  query-49b8fd20d3d3abe46b00bb915d83a32778c234789e0edec43338fb312cac86df.json  query-4bb23f9345842a93ff035946c69e6a7e4de0e59e9806aeebc78831b8addd9e10.json  query-4cb7d1b82c3c708d0453ef3f134337a41d8d10a64cb4f35a4702020ca11165ea.json  query-63c4cf880d236ee5c442fa89b4d4e0d9ebfeec57cf1a0c21e031a1a363bbf939.json  query-672f5158f00ad4da15456a537c135c45b65c9e12cec84cf5879100cfe9f6f119.json  query-9914d7f8b22b4aecc117a5bec034cf4bba1eb0627502b6318036c1f18dd40427.json  query-ae9a5557955d9bcf05f1daa346fc67a3c5aeff3690f1def0dfa5dd53057434a1.json  query-c0b55b92e9eec9d3e1b8d3fa746ad7ea6008132231157f3ccc6f0b814e05c4c0.json  query-c5b5ee5ab37d8c954b520ec2adec750497e5403e8abdef7195b835b8b08b748f.json  query-cb9fc86b50a9b8aa64b6b1f75e65de9324a23fb043746a357514d3b049d88097.json  query-cee6ea2f0e4a3df052f58b6b72f306c932f4f51def7d54fd64d300f8fe2b56e0.json  query-cf733eb84c147d31864a6fd50d0f6f421fccfd6e6a3f21246257dc7eb86c3719.json  query-e5d110f77d120945c65aa867bdef5cf1eb4273bfa71b14f77a16ceb872d97913.json  query-e908095bdf6d9350640b9f160b53bbe4f6414a7b991e5eee1c5354e27110d964.json
SourceCode/back-end/docs/: TESTING.md
SourceCode/back-end/migrations/: 20260201000001_create_user_role_enum.sql  20260201000002_create_companies_table.sql  20260201000003_create_users_table.sql  20260201000004_create_invitations_table.sql  20260201000005_create_security_logs_table.sql  20260201000006_create_password_resets_table.sql  20260201000007_create_passkeys_table.sql  20260201000008_create_passkey_sessions_table.sql  20260203000001_add_performance_indexes.sql  20260203000002_remove_unused_indexes.sql  20260216000001_add_new_roles.sql  20260216000001_create_clock_events_table.sql  20260216000002_add_branches_and_migrate.sql  20260217114139_create_branch_deletion_tokens_table.sql  20260304000001_add_profile_picture_id.sql  20260309000001_drop_clock_inout_status.sql  20260319135810_add_company_logos.sql  20260325000001_add_company_export_status.sql  20260326000001_add_company_deletion_confirmation.sql  20260401000001_add_deletion_requester_email.sql  20260415000001_add_security_log_metadata_columns.sql  20260423000001_add_passkey_sessions_userid_fk.sql  20260505120646_remove_unnecessary_indexes.sql  20260506000001_add_missing_indexes.sql  20260507000000_add_missing_indexes_prod.sql
SourceCode/back-end/src/: api_docs.rs  auth.rs  db.rs  dto.rs  email.rs  exports_db.rs  handlers.rs  images_db.rs  jwt_manager.rs  lib.rs  llm.rs  logs_db.rs  main.rs  (+5 more)
(+244 files in other folders)
