[package]
name = "back-end"
version = "0.1.0"
edition = "2024"

[lib]
name = "back_end"
path = "src/lib.rs"

[[bin]]
name = "back-end"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8.7", features = ["macros"] }
axum-extra = { version = "0.12.2", features = ["typed-header"] }
async-trait = "0.1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-native-tls"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.5"
regex = "1.10"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4", "v6", "serde"] }
headers = "0.4.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-native-tls"] }
tempfile = "3.8"
tower = "0.5"
hyper = { version = "1", features = ["full"] }
