[package]
name = "back-end"
version = "1.1.0"
edition = "2024"
default-run = "logsmart-srv"

[lib]
name = "back_end"
path = "src/lib.rs"

[[bin]]
name = "logsmart-srv"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8.7", features = ["macros", "multipart"] }
base64 = "0.22"
axum-extra = { version = "0.12.2", features = ["typed-header"] }
async-trait = "0.1"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls", "macros", "chrono"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.5"
regex = "1.10"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
uuid = { version = "1.0", features = ["v4", "v6", "serde"] }
headers = "0.4.1"
governor = "0.10.4"
dashmap = "6.1"
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
lettre = { version = "0.11", features = ["tokio1-native-tls", "smtp-transport", "builder"] }
dotenvy = "0.15"
mongodb = "3.4.1"
futures-util = "0.3.31"
ollama-rs = { version = "0.3", features = ["stream"] }
schemars = "1.1.0"
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation", "conditional-ui"] }
url = "2.5.7"
webauthn-rs-proto = "0.5.4"
openidconnect = { version = "4.0.1", features = [ "reqwest" ] }
reqwest = { version = "0.13.1", features = ["json", "multipart"] }
moka = { version = "0.12.13", features = ["future"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls"] }
tempfile = "3.8"
tower = "0.5"
hyper = { version = "1", features = ["full"] }
proptest = "1.9.0"
